--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
   "name": "superapp",
-
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -11,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.1.4",
     "antd": "^5.6.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
